--- a/package.json
+++ b/package.json
@@ -27,14 +27,12 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.2.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1",
     "prettier-plugin-package": "^1.3.0",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-twbs-bootstrap": "^2.1.0",
-    "stylelint-prettier": "^1.1.2"
+    "stylelint-config-twbs-bootstrap": "^2.1.0"
   }
 }
