--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@chalkygames123/stylelint-config": "^2.1.1",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.0.0",
@@ -32,7 +33,6 @@
     "prettier": "^2.2.1",
     "prettier-plugin-package": "^1.3.0",
     "stylelint": "^13.8.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-twbs-bootstrap": "^2.1.0"
+    "stylelint-config-prettier": "^8.0.2"
   }
 }
