--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "engines": {
-    "node": ">=14"
+    "node": "15"
   },
   "scripts": {
     "build": "parcel build src/index.html",
