--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "prettier-plugin-package": "1.3.0",
     "stylelint": "13.10.0",
     "stylelint-config-prettier": "8.0.2"
+  },
+  "volta": {
+    "node": "15.11.0"
   }
 }
