--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "parcel build src/index.html",
     "dev": "parcel src/index.html --open",
     "fix": "run-p fix:* --continue-on-error",
-    "fix:scripts": "run-s \"lint:scripts --fix\"",
-    "fix:styles": "run-s \"lint:styles --fix\" \"lint:styles --fix\"",
-    "format": "run-s \"format-check --write\"",
+    "fix:scripts": "run-s \"lint:scripts -- --fix\"",
+    "fix:styles": "run-s \"lint:styles -- --fix\" \"lint:styles -- --fix\"",
+    "format": "run-s \"format-check -- --write\"",
     "format-check": "prettier . --check",
     "lint": "run-p lint:* --continue-on-error",
     "lint:scripts": "eslint .",
