--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.22.1",
     "npm-run-all": "4.1.5",
-    "parcel-bundler": "1.12.4",
+    "parcel": "2.0.0-beta.2",
     "prettier": "2.2.1",
     "prettier-plugin-package": "1.3.0",
     "stylelint": "13.12.0",
