package.json#browserslist を defaults に設定
参照: https://v2.parceljs.org/getting-started/webapp/#browserslist

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "stylelint-config-prettier": "8.0.2"
   },
   "browser": "dist/index.html",
+  "browserslist": "defaults",
   "volta": {
     "node": "15.11.0"
   }
