--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@
 
 ### Project-specific settings ###
 
-# Build output
+# build output
 dist
+
+# dependencies
 node_modules
+
+# parcel
+.parcel-cache
