--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>chalkygames123/renovate-config"]
+  "extends": ["github>chalkygames123/renovate-config"],
+  "packageRules": [
+    {
+      "matchPackageNames": ["parcel"],
+      "followTag": "next"
+    }
+  ]
 }
