--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"tabbable": "5.2.1"
 	},
 	"devDependencies": {
+		"@babel/eslint-parser": "7.15.0",
+		"@babel/eslint-plugin": "7.14.5",
 		"@chalkygames123/stylelint-config": "5.0.0",
 		"eslint": "7.32.0",
 		"eslint-config-prettier": "8.3.0",
