Revert "renovate.json: `next` タグに追従するよう Parcel 用の構成を追加"
This reverts commit 2b8ae86fc7de226c647193771e9cbfee83306548.

--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,4 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["github>chalkygames123/renovate-config"],
-	"packageRules": [
-		{
-			"matchPackageNames": ["parcel"],
-			"followTag": "next"
-		}
-	]
+	"extends": ["github>chalkygames123/renovate-config"]
 }
