--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
 		"lint:styles": "stylelint \"**/*.css\""
 	},
 	"dependencies": {
+		"@hotwired/stimulus": "3.0.0",
 		"body-scroll-lock": "3.1.5",
 		"eslint-config-xo": "0.39.0",
 		"eslint-plugin-unicorn": "36.0.0",
-		"stimulus": "3.0.0",
 		"tabbable": "5.2.1"
 	},
 	"devDependencies": {
