--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"stylelint": "13.13.1",
 		"stylelint-config-prettier": "8.0.2"
 	},
-	"browserslist": "defaults",
+	"browserslist": "defaults, not ie 11",
 	"volta": {
 		"node": "16.10.0"
 	}
