--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"build": "parcel build src/index.html",
 		"check": "run-p check:* --continue-on-error",
+		"check:editorconfig": "editorconfig-checker",
 		"check:prettier": "prettier . --check",
 		"dev": "parcel src/index.html --open",
 		"fix": "run-p fix:* --continue-on-error",
@@ -29,6 +30,7 @@
 		"@babel/eslint-parser": "7.15.8",
 		"@babel/eslint-plugin": "7.14.5",
 		"@chalkygames123/stylelint-config": "5.0.1",
+		"editorconfig-checker": "4.0.2",
 		"eslint": "8.0.1",
 		"eslint-config-prettier": "8.3.0",
 		"npm-run-all": "4.1.5",
