--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.md]
+indent_style = space
 trim_trailing_whitespace = false
 
 [*.{yaml,yml}]
