--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 		"lint:stylelint": "stylelint \"**/*.css\""
 	},
 	"dependencies": {
-		"@hotwired/stimulus": "3.0.1",
 		"body-scroll-lock": "3.1.5",
+		"stimulus": "2.0.0",
 		"tabbable": "5.2.1"
 	},
 	"devDependencies": {
