--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"stylelint": "14.9.1",
 		"stylelint-config-prettier": "9.0.3"
 	},
-	"browserslist": "defaults, not ie 11",
+	"browserslist": "defaults",
 	"volta": {
 		"node": "18.6.0"
 	}
